[package]
name = "xbar-review-request-status"
version = "0.1.0"
edition = "2021"
authors = [ "Brian Hicks <brian@brianthicks.com>" ]
description = "Format GitHub review requests for use in an xbar script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = [ "std", "color", "suggestions", "derive", "cargo", "wrap_help", "env" ] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = [ "blocking", "json" ] }
serde_json = "1.0.105"
